--- a/cmd/registry/config-example-with-extensions.yml
+++ b/cmd/registry/config-example-with-extensions.yml
@@ -6,15 +6,15 @@ storage:
   cache:
     blobdescriptor: inmemory
   filesystem:
-    rootdirectory: /var/lib/registry
+    rootdirectory: /opt/data/registry-root-dir
 http:
   addr: :5000
   headers:
     X-Content-Type-Options: [nosniff]
-auth:
-  htpasswd:
-    realm: basic-realm
-    path: /etc/registry
+# auth:
+#   htpasswd:
+#     realm: basic-realm
+#     path: /home/sajay/code/src/github.com/mnltejaswini/distribution/data/passwords
 health:
   storagedriver:
     enabled: true
@@ -25,6 +25,9 @@ health:
 #   namespace:
 #     configuration for the extension and its components in any schema specific to that namespace
 extensions:
+  oci: 
+    ext:
+      - discover # enable the discovery extension
   # "distribution" is the namespace
   distribution:
     # "registry" is the extension under the namespace
